--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Ilocano Recipes</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
+    
     body {
       background-color: #e0f7fa;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -79,7 +80,7 @@
 </head>
 <body>
 
-  <!-- Navbar -->
+  <!-- Navbar,, -->
   <nav class="navbar navbar-expand-md navbar-dark fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
